bbdd modulo III IA

--- a/public/campus/posgrados/ia/2/styles/course.scss
+++ b/public/campus/posgrados/ia/2/styles/course.scss
@@ -23,3 +23,9 @@
 .cmid-2984906, .cmid-2985521 {
     @include general.bbdd-1col;
 }
+
+/* Base de datos MODULO III Evaluar la evaluacion */
+
+.cmid-2992143 {
+    @include general.bbdd-1col;
+}
