--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -1,22 +1,19 @@
-@use '../../../base/styles/general';
+@use "../../../base/styles/general";
 
 /* HOJA DE RECURSOS */
-
 
 /* Le pongo los estilos con mixin */
 
 .cmid-2975439 {
-    @include general.hoja-recursos;
+  @include general.hoja-recursos;
 }
-
 
 /* BBDD - AMAD - SESIÓN 1 */
 
 .cmid-2975252,
 .cmid-2975253 {
-    @include general.bbdd-1col;
+  @include general.bbdd-1col;
 }
-
 
 /* BBDD - GESTIC */
 
@@ -26,9 +23,8 @@
 .cmid-2975450,
 .cmid-2975447,
 .cmid-2975449 {
-    @include general.bbdd-1col;
+  @include general.bbdd-1col;
 }
-
 
 /* BBDD - MOCHILAS LIPROF */
 
@@ -41,11 +37,14 @@
 .cmid-2975523,
 .cmid-2975522,
 .cmid-2975574 {
-    @include general.bbdd-mochilas-liprof;
+  @include general.bbdd-mochilas-liprof;
 }
 
 /* BBDD ANOTADORES BATA */
 
-.cmid-2975384, .cmid-2975385, .cmid-2975387, .cmid-2975388 {
-    @include general.bbdd-anotadores-bata;
+.cmid-2975384,
+.cmid-2975385,
+.cmid-2975387,
+.cmid-2975388 {
+  @include general.bbdd-anotadores-bata;
 }
