--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1886,6 +1886,9 @@ body.home:not(.editing) {
               @include body;
               border: none !important;
               color: $grey3 !important;
+              &::after {
+                display: none;
+              }
             }
           }
         }
